# ldx-comfy-server

./: .gitignore  PLUGIN_ARCHITECTURE_SUMMARY.md  README.md  auth.json  clean_redundant_permissions.py  config.py  debug_auth_config.py  debug_token.py  generate_test_token.py  global_data.py  history.py  logging_config.py  main.py  pyproject.toml  pytest.ini  test_admin_role_assignment.py  test_permissions.py  test_permissions_debug.py  test_plugins.py  test_workflow_auth.py  validate_permissions.py  verify_admin_logic.py  workflow_api.json
auth/: __init__.py  config.py  jwt.py  middleware.py  permissions.py
comfy/: get_wfs.py  logging_config.py  run_wf.py
comfy/nodes/: __init__.py  load_image_output.py  switch_any.py  text_input.py
comfy/plugins/: README.md  __init__.py  base.py  config.py  manager.py  node_handlers.py  workflow_executors.py
routers/: __init__.py  auth.py  forms.py  groups.py  health.py  run_wfs.py  settings.py  users.py  wfs.py
tests/: conftest.py  test_current_admin_logic.py  test_execute_workflow.py  test_groups.py  test_permissions.py  test_plugins.py  test_run_wf.py  test_user_creation.py
tests/test_comfy/: __init__.py  test_get_wfs.py  test_logging_config.py
tests/test_nodes/: __init__.py  test_load_image_output.py  test_switch_any.py  test_text_input.py
tests/test_plugins/: __init__.py
tests/test_routers/: __init__.py  test_auth.py
wf_files/: Simple.json
