[project]
name = "yinghao-comfy-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "httpx[socks]>=0.28.1",
    "websocket-client>=1.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "rich>=14.1.0",
]
